--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "UseInMemoryDatabase": true,
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DarInternetDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "User ID=darinternet;Password=darinternet;Host=localhost;Port=5432;Database=localdarinternet;"
   },
   "Logging": {
     "LogLevel": {
