--- a/src/DarInternet.Application/DarInternet.Application.csproj
+++ b/src/DarInternet.Application/DarInternet.Application.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\DarInternet.Domain\DarInternet.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="Features\TodoItems\" />
+    <Folder Include="Features\TodoLists\" />
+    <Folder Include="Features\WeatherForecasts\" />
+  </ItemGroup>
 </Project>
