--- a/tests/Application.IntegrationTests/Application.IntegrationTests.csproj
+++ b/tests/Application.IntegrationTests/Application.IntegrationTests.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="Respawn" Version="4.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.1" />
+    <PackageReference Include="Shouldly" Version="4.0.3" />
         
   </ItemGroup>
 
