--- a/src/DarInternet.Api/DarInternet.Api.csproj
+++ b/src/DarInternet.Api/DarInternet.Api.csproj
@@ -5,6 +5,9 @@
     <RootNamespace>DarInternet.Api</RootNamespace>
     <AssemblyName>DarInternet.Api</AssemblyName>
     <IsPackable>true</IsPackable>
+    <UserSecretsId>fbc4de6d-357a-4b87-8870-a4f0e23b0a85</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />    
   </ItemGroup>
 
