add fandogh manifest based on docker file

--- a/src/DarInternet.Api/appsettings.json
+++ b/src/DarInternet.Api/appsettings.json
@@ -1,12 +1,18 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=darinternet;Password=darinternet;Host=localhost;Port=5432;Database=localdarinternet;"
+    "DarInternetDatabase": "__DarInternetDatabase__"
+  },
+  "DarInternetConfig": {
+    "AllowedClientUrl": "__AllowedClientUrl__",
+    "IdentityServerUrl": "__IdentityServerUrl__",
+    "ApiBaseUrl": "__ApiBaseUrl__"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },  
-  "AllowedHosts": "*"
+  }
 }
