--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         fandogh namespace active --name ${{ secrets.FANDOGH_NAMESPACE }}
     - name: Publish image to Fandogh
       run: |
-        fandogh image publish
+        fandogh image publish --version latest
     - name: Deploy fandogh image
       run: |
-        fandogh service apply -f fandogh.yml
+        fandogh service apply -f fandogh.yml -p IMAGE_VERSION=latest
