--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,17 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: naminodarie/get-net-sdk-project-versions-action@v1
+    - name: Get API project Version info
+      uses: naminodarie/get-net-sdk-project-versions-action@v1
       id: get-version
       with:
-        proj-path: src\DarInternet.Api\DarInternet.Api.csproj
-    - run: echo "${{steps.get-version.outputs.version}}"
-    - run: echo "${{steps.get-version.outputs.version-prefix}}" 
-    - run: echo "${{steps.get-version.outputs.version-suffix}}" 
-    - run: echo "${{steps.get-version.outputs.package-version}}" 
-    - run: echo "${{steps.get-version.outputs.assembly-version}}" 
-    - run: echo "${{steps.get-version.outputs.file-version}}" 
-    - run: echo "${{steps.get-version.outputs.informational-version}}" 
+         proj-path: src\DarInternet.Api\DarInternet.Api.csproj
         
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
